OBS ids in human readable csv

--- a/dmu31/dmu31_Examples/HELP_paper_figures/1_Number_counts.ipynb
+++ b/dmu31/dmu31_Examples/HELP_paper_figures/1_Number_counts.ipynb
@@ -21,6 +21,8 @@
     "#mpl.use('pdf')\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
+    "from astropy import constants as c\n",
+    "from astropy import units as u\n",
     "\n",
     "import numpy as np\n",
     "#plt.rc('figure', figsize=(10, 6))\n",
