--- a/dmu31/dmu31_Examples/dmu31_XID+_new_source_prior.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_XID+_new_source_prior.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/H-E-L-P/dmu_products/blob/master/dmu31/dmu31_Examples/dmu31_XID%2B_new_source_prior.ipynb)\n",
+    "\n",
     "# How to run XID+ on SPIRE maps for a new source not included in HELP \n",
     "This notebooks will guide you on how to run XID+ in a specific region to obtain the FIR flux on SPIRE maps for a new source not included in the HELP catalogue.\n"
    ]
