--- a/dmu31/dmu31_Examples/dmu31_XID+_new_source_prior.ipynb
+++ b/dmu31/dmu31_Examples/dmu31_XID+_new_source_prior.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append(\"/content/drive/work/XID_plus\")"
+    "sys.path.append(\"/content/XID_plus\")"
    ]
   },
   {
@@ -122,8 +122,16 @@
     "from astropy import units as u\n",
     "from astropy.nddata import Cutout2D\n",
     "from astropy.utils.data import download_file\n",
-    "from astropy import wcs\n",
-    "\n",
+    "from astropy import wcs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pyvo\n",
     "import pyvo as vo"
    ]
   },
@@ -167,14 +175,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<i>Table length=1</i>\n",
-       "<table id=\"table140504091698176\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140407351228640\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Name</th><th>ra</th><th>dec</th></tr></thead>\n",
        "<thead><tr><th>str2</th><th>float64</th><th>float64</th></tr></thead>\n",
        "<tr><td>s1</td><td>243.163</td><td>54.477</td></tr>\n",
@@ -188,14 +196,19 @@
        "  s1 243.163  54.477"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read in new source coordinates from a file\n",
-    "newsource = Table.read('table.dat', format='ascii') # RA, DEC in deg\n",
+    "# newsource = Table.read('./table.dat', format='ascii') # RA, DEC in deg\n",
+    "\n",
+    "# Or create the table \n",
+    "newsource = Table(names=['Name', 'ra', 'dec'], dtype=['str', 'float', 'float'])\n",
+    "newsource.add_row(['s1', 243.163,  54.477])\n",
+    "\n",
     "newsource"
    ]
   },
@@ -345,9 +358,6 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -366,7 +376,7 @@
     "# Plot the sources in HELP and the new source\n",
     "#############################################\n",
     "plt.figure(figsize=(10,10))\n",
-    "plt.plot(sourcesb['ra'], sourcesb['dec'],'.', label='HELP sources')\n",
+    "plt.plot(sources['ra'], sources['dec'],'.', label='HELP sources')\n",
     "plt.plot(newsource['ra'], newsource['dec'],'x', markersize=10, label='New source')\n",
     "plt.xlabel('RA')\n",
     "plt.ylabel('DEC')\n",
