Preparing HS82 rerun notebooks
use VICS82 preferentially over VHS and run Marias selection notebook

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/2.3_VICS82_VHS_merging.ipynb
@@ -457,8 +457,9 @@
     "    has_vhs = ~np.isnan(master_catalogue['f_vhs_' + band.strip('s')])\n",
     "    has_vics82 = ~np.isnan(master_catalogue['f_vista_' + band])\n",
     "\n",
-    "    use_vhs = has_vhs \n",
-    "    use_vics82 = has_vics82 & ~has_vhs\n",
+    "    #take VICS82 if available\n",
+    "    use_vhs = has_vhs & ~has_vics82\n",
+    "    use_vics82 = has_vics82 \n",
     "\n",
     "\n",
     "    master_catalogue['f_vista_' + band][use_vhs] = master_catalogue['f_vhs_' + band.strip('s')][use_vhs]\n",
@@ -484,8 +485,9 @@
     "    has_ap_vhs = ~np.isnan(master_catalogue['f_ap_vhs_' + band.strip('s')])\n",
     "    has_ap_vics82 = ~np.isnan(master_catalogue['f_ap_vista_' + band])\n",
     "\n",
-    "    use_ap_vhs = has_ap_vhs \n",
-    "    use_ap_vics82 = has_ap_vics82 & ~has_ap_vhs\n",
+    "    #take VICS82 if available\n",
+    "    use_ap_vhs = has_ap_vhs & ~has_ap_vics82\n",
+    "    use_ap_vics82 = has_ap_vics82 \n",
     "\n",
     "\n",
     "    master_catalogue['f_ap_vista_' + band][use_ap_vhs] = master_catalogue['f_ap_vhs_' + band.strip('s')][use_ap_vhs]\n",
@@ -788,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
