Rerun HS82 VICS82 with flux unit error fix

--- a/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
+++ b/dmu1/dmu1_ml_Herschel-Stripe-82/1.3_VICS82.ipynb
@@ -200,8 +200,8 @@
     "        # Fluxes are added in µJy\n",
     "        #catalogue.add_column(Column(flux * 1.e6, name=\"f{}\".format(col[1:])))\n",
     "        #catalogue.add_column(Column(error * 1.e6, name=\"f{}\".format(errcol[1:])))\n",
-    "        catalogue[\"f{}\".format(col[1:])]=flux\n",
-    "        catalogue[\"f{}\".format(errcol[1:])]=error\n",
+    "        catalogue[\"f{}\".format(col[1:])]=flux* 1.e6\n",
+    "        catalogue[\"f{}\".format(errcol[1:])]=error* 1.e6\n",
     "        \n",
     "        # Band-flag column\n",
     "        if \"ap\" not in col:\n",
