run notebook with subfiles

--- a/dmu10/1.2.HELP_selection_function_HS-82.ipynb
+++ b/dmu10/1.2.HELP_selection_function_HS-82.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +38,7 @@
     "import numpy as np\n",
     "import pymoc \n",
     "from pymoc import MOC\n",
+    "from datetime import datetime\n",
     "\n",
     "\n",
     "from herschelhelp_internal.masterlist import merge_catalogues, nb_merge_dist_plot, specz_merge\n",
@@ -46,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "DMU_DIR = '../'\n",
     "FIELD = 'Herschel-Stripe-82'\n",
-    "SUFFIX='20210506'"
+    "SUFFIX = datetime.today().strftime('%Y%m%d')"
    ]
   },
   {
@@ -204,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compare_cats_venndiagram(cat1, cat2, ind_catalogue, ind_names, cat1name, cat2name, save=False):\n",
+    "def compare_cats_venndiagram(cat1, cat2, ind_catalogue, ind_names, cat1name, cat2name, save=True):\n",
     "    \"\"\"\n",
     "    \"\"\"\n",
     "    for i, ind_cat in enumerate(ind_catalogue):\n",
@@ -271,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "use_subfiles = False\n",
+    "use_subfiles = True\n",
     "\n",
     "if use_subfiles == False:\n",
     "    masterfile = DMU_DIR + 'dmu1/dmu1_ml_Herschel-Stripe-82/data/master_catalogue_herschel-stripe-82_{}.fits'.format(SUFFIX) # too big\n",
@@ -310,18 +311,7 @@
     "j = ['vista_j',  'ukidss_j']\n",
     "k = ['vista_ks', 'ukidss_k']\n",
     "\n",
-    "helpbands = [u + g + r + i + z + y] + [y_nir + h + j + k] \n",
-    "\n",
-    "\n",
-    "\n",
-    "# y_nir = [         'vista_y',  'ukidss_y']\n",
-    "# h = [             'vista_h',  'ukidss_h']\n",
-    "# j = ['wircam_j',  'vista_j',  'ukidss_j']\n",
-    "# k = ['wircam_ks', 'vista_ks', 'ukidss_k']\n",
-    "\n",
-    "# # irac = ['f_irac_i1','f_irac_i2']\n",
-    "\n",
-    "# helpbands_wircam = [u + g + r + i + z + y] + [y_nir + h + j + k] #+ [irac]"
+    "helpbands = [u + g + r + i + z + y] + [y_nir + h + j + k] "
    ]
   },
   {
@@ -474,7 +464,7 @@
     "    ])\n",
     "\n",
     "ind_names =  np.array([\n",
-    "    '_ldustcriteria',\n",
+    "    '_ldustcriteria_{}'.format(SUFFIX),\n",
     "#     cat_name+'_iraccriteria'\n",
     "])\n",
     "\n",
@@ -502,7 +492,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hs82_cat_selected = masterlist[ind_catalogue_ldustcriteria]"
+    "# hs82_cat_selected = masterlist[ind_catalogue_ldustcriteria]"
    ]
   },
   {
@@ -520,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hs82_cat_selected.write('./data/hs82_selected_sources_sf_{}.fits'.format(SUFFIX),overwrite=True)"
+    "# hs82_cat_selected.write('./data/hs82_selected_sources_sf_{}.fits'.format(SUFFIX),overwrite=True)"
    ]
   }
  ],
@@ -540,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
