Put catalogue production in try

--- a/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_AKARI-SEP/2_Merging.ipynb
@@ -89,8 +89,8 @@
    "outputs": [],
    "source": [
     "vhs = Table.read(\"{}/VISTA-VHS.fits\".format(TMP_DIR))\n",
-    "simes = Table.read(\"{}/SIMES.fits\".format(TMP_DIR))\n",
-    "des = Table.read(\"{}/DES.fits\".format(TMP_DIR))"
+    "simes = Table.read(\"{}/SIMES_8.fits\".format(TMP_DIR))\n",
+    "des = Table.read(\"{}/DES_DR2.fits\".format(TMP_DIR))"
    ]
   },
   {
@@ -823,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
