--- a/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
+++ b/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "quarterly-opposition",
+   "id": "particular-bahamas",
    "metadata": {},
    "source": [
     "# Make catalogue of sources above limit\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-riding",
+   "id": "polyphonic-calendar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constitutional-quilt",
+   "id": "ambient-letters",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chief-albany",
+   "id": "armed-regular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varied-joyce",
+   "id": "agreed-assembly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "awful-omega",
+   "id": "traditional-springfield",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incredible-faith",
+   "id": "pharmaceutical-first",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,32 +147,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "detected-basin",
+   "id": "quantitative-intake",
    "metadata": {},
    "outputs": [],
    "source": [
     "fullCat=Table()\n",
     "for m in maps:\n",
     "    for limit in [80.,100.]:\n",
-    "        cat=makeCat(m,limit =limit*1.e-3)\n",
-    "        cat.write(\n",
-    "            m.replace('data','data/cats').replace('.fits','_{}_pix_cat.vot').format(limit),\n",
-    "            format='votable',overwrite=True)\n",
-    "        nonObjCols=[]\n",
-    "        for c in cat.colnames:\n",
-    "            if str(cat[c].dtype)!='object':\n",
-    "                nonObjCols.append(c)\n",
-    "        cat[nonObjCols].write(\n",
-    "            m.replace('data','data/cats').replace('.fits','_{}_pix_cat.fits').format(limit),\n",
-    "            overwrite=True)\n",
-    "        if limit>90:\n",
-    "            fullCat=vstack([fullCat,cat[nonObjCols]])"
+    "        try:\n",
+    "            cat=makeCat(m,limit =limit*1.e-3)\n",
+    "            cat.write(\n",
+    "                m.replace('data','data/cats').replace('.fits','_{}_pix_cat.vot').format(limit),\n",
+    "                format='votable',overwrite=True)\n",
+    "            nonObjCols=[]\n",
+    "            for c in cat.colnames:\n",
+    "                if str(cat[c].dtype)!='object':\n",
+    "                    nonObjCols.append(c)\n",
+    "            cat[nonObjCols].write(\n",
+    "                m.replace('data','data/cats').replace('.fits','_{}_pix_cat.fits').format(limit),\n",
+    "                overwrite=True)\n",
+    "            if limit>90:\n",
+    "                fullCat=vstack([fullCat,cat[nonObjCols]])\n",
+    "        except:\n",
+    "            print('FAILED:', m, limit)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fitted-juvenile",
+   "id": "junior-button",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "victorian-briefs",
+   "id": "mature-nitrogen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preliminary-valuation",
+   "id": "light-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
