Add mask value to birght pixel catalogue

--- a/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
+++ b/dmu19/dmu19_HELP-SPIRE-maps/2_Make_bright_catalogues.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "particular-bahamas",
+   "id": "similar-kingston",
    "metadata": {},
    "source": [
     "# Make catalogue of sources above limit\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polyphonic-calendar",
+   "id": "educated-hundred",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,17 @@
     "from astropy.table import Table,vstack\n",
     "from astropy.wcs import WCS\n",
     "from astropy.io import fits\n",
+    "import astropy.units as u\n",
     "from scipy.ndimage import label, generate_binary_structure\n",
-    "\n"
+    "\n",
+    "from pymoc import MOC\n",
+    "from herschelhelp_internal.utils import inMoc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ambient-letters",
+   "id": "labeled-piano",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +43,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "armed-regular",
+   "id": "cathedral-tension",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coverage = MOC(filename='../../dmu2/help_coverage_MOC.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "spectacular-lloyd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +63,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "agreed-assembly",
+   "id": "other-nancy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.sum(fits.open('./data/COSMOS_SPIRE500_v1.0.fits')[5].data == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "insured-squad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fits.open('./data/COSMOS_SPIRE500_v1.0.fits')[5].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "controlled-absence",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "facial-simpson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +101,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "traditional-springfield",
+   "id": "pleased-particular",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def makeCat(mapName,limit=100.e-3):\n",
+    "def makeCat(mapName,limit=80.e-3):\n",
     "    \"open map and make catalogue of sources\"\n",
     "    #mapName=maps[2]\n",
     "    #limit= 100.e-3\n",
@@ -73,13 +114,20 @@
     "    w = WCS(f[1].header)\n",
     "    #open the image as numpy array\n",
     "    image = f[1].data\n",
+    "    if f[5].header['EXTNAME']=='MASK':\n",
+    "        mask = f[5].data\n",
+    "    else:\n",
+    "        mask=None\n",
     "    #make a mask above the limit\n",
     "    aboveLim = image>limit\n",
+    "\n",
     "    #show the whole image\n",
     "\n",
     "    #get contiguous regions\n",
     "    labeled_array, num_features = label(aboveLim)\n",
-    "    \n",
+    "    if num_features ==1:\n",
+    "        print('No detections',num_features,aboveLim.shape,image.shape)\n",
+    "        return None\n",
     "    #make the catalogue of sources\n",
     "    cat = Table()\n",
     "    cat['id']=np.arange(1,num_features)\n",
@@ -99,14 +147,18 @@
     "            np.where(labeled_array == i)[0],np.where(labeled_array == i)[1]\n",
     "        ).dec.deg \n",
     "        for i in cat['id']]\n",
+    "    \n",
     "    cat['pixel_value']= [image[row['pixel_x'],row['pixel_y']] for row in cat]\n",
+    "    if mask is not None:\n",
+    "        cat['mask_value']= [mask[row['pixel_x'],row['pixel_y']] for row in cat]\n",
     "    cat['peak_pixel_value'] = [np.max(row['pixel_value']) for row in cat]\n",
     "    cat['peak_index'] = [int(np.where(np.isclose(row['pixel_value'],row['peak_pixel_value']))[0]) for row in cat]\n",
     "    cat['peak_pixel_x'] = [row['pixel_x'][row['peak_index']] for row in cat]\n",
     "    cat['peak_pixel_y'] = [row['pixel_y'][row['peak_index']] for row in cat]\n",
     "    cat['peak_pixel_ra'] = [row['pixel_ra'][row['peak_index']] for row in cat]\n",
     "    cat['peak_pixel_dec'] = [row['pixel_dec'][row['peak_index']] for row in cat]\n",
-    "    \n",
+    "    cat['peak_mask_value'] = [row['mask_value'][row['peak_index']] for row in cat]\n",
+    "    cat['inside']=inMoc(cat['peak_pixel_ra']*u.deg,cat['peak_pixel_dec']*u.deg,coverage)\n",
     "    print(\"\"\"Pixels above {} Jy: {}. \n",
     "Number of sources: {}. \n",
     "Number of sources with more than one pixel:{}\"\"\".format(\n",
@@ -123,7 +175,8 @@
     "            np.nanpercentile(image.ravel(),99.9)\n",
     "            ))\n",
     "    #plt.ylim([0,np.max(image.shape[1])])\n",
-    "    plt.scatter(cat['peak_pixel_y'],cat['peak_pixel_x'],s=200, facecolors='none', edgecolors='r')\n",
+    "    m = cat['peak_mask_value']==0 & cat['inside']\n",
+    "    plt.scatter(cat[m]['peak_pixel_y'],cat[m]['peak_pixel_x'],s=200, facecolors='none', edgecolors='r')\n",
     "    \n",
     "    plt.savefig('./figs/{}.png'.format(mapName.split('/')[-1].replace('.fits',''))) \n",
     "    plt.show()\n",
@@ -137,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pharmaceutical-first",
+   "id": "agricultural-corrections",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quantitative-intake",
+   "id": "golden-pricing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-button",
+   "id": "golden-router",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mature-nitrogen",
+   "id": "august-community",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "light-leeds",
+   "id": "animated-inspector",
    "metadata": {},
    "outputs": [],
    "source": [
